tests/failing/pi.tail
let v1:S(int,10000) = 10000 in
let v11:[double]0 = muld(i2d(4),divd(i2d(reduce{[int],[0]}(addi,0,each{[bool,int],[1]}(b2i,each{[double,bool],[1]}(fn v7:[double]0 => gtd(i2d(b2iV(tt)),v7),each{[double,double],[1]}(fn v6:[double]0 => powd(v6,divd(1.00,i2d(2))),reduce{[double],[1]}(addd,0.00,each{[double,double],[2]}(fn v3:[double]0 => powd(v3,i2d(2)),each{[bool,double],[2]}(fn v2:[bool]0 => roll(b2i(v2)),reshape{[bool],[1,2]}([v1,2],[ff]))))))))),i2d(v1))) in
i2d(b2i(gtd(0.10,absd(subd(v11,muld(i2d(b2iV(tt)),pi))))))
